log/wrap-lockfile.out

> lockfile@0.4.2 test /Users/jakub/Developer/Blame/externals/lockfile
> tap test/*.js

not ok test/basic.js .................................... 0/1
    Command: "node" "basic.js"
    TAP version 13
    not ok 1 test/basic.js
      ---
        timedOut: ~
        exit:     1
        stderr:   |
          /Users/jakub/Developer/Blame/externals/lockfile/lockfile.js:287
                lockfile '.Options'), Blame.fun([T.get('Error')], [], null, Blame.Void)]
                ^^^^^^^^
          SyntaxError: Unexpected identifier
              at exports.runInThisContext (vm.js:69:16)
              at Module._compile (module.js:432:25)
              at Object.Module._extensions..js (module.js:467:10)
              at Module.load (module.js:349:32)
              at Function.Module._load (module.js:305:12)
              at Module.require (module.js:357:17)
              at require (module.js:373:17)
              at Object.<anonymous> (/Users/jakub/Developer/Blame/externals/lockfile/test/basic.js:2:16)
              at Module._compile (module.js:449:26)
              at Object.Module._extensions..js (module.js:467:10)
        command:  "node" "basic.js"
      ...
    
    1..1
    # tests 1
    # fail  1
    
total ................................................... 0/1

not ok
